src/global.scss
// http://ionicframework.com/docs/theming/
@import '~@ionic/angular/css/core.css';
@import '~@ionic/angular/css/normalize.css';
@import '~@ionic/angular/css/structure.css';
@import '~@ionic/angular/css/typography.css';

@import '~@ionic/angular/css/padding.css';
@import '~@ionic/angular/css/float-elements.css';
@import '~@ionic/angular/css/text-alignment.css';
@import '~@ionic/angular/css/text-transformation.css';
@import '~@ionic/angular/css/flex-utils.css';

ion-button {
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 3px;
  margin: 16px 0;
}

.my-side-menu {
  .logo-wrapper {
    width: 100%;
    padding-top: 100%;
    position: relative;
    display: flex;
    justify-content: center;

    .agrio-logo {
      position: absolute;
      top: 105px;
      width: 60px;
    }

    .agrio-name {
      position: absolute;
      top: 170px;
      width: 100px;
    }
  }

  .logo-wrapper::after {
    content: '';
    position: absolute;
    z-index: 10;
    height: 2px;
    left: 16px;
    right: 16px;
    bottom: -1px;
    border-radius: 5px;
    background-color: #E3E7E6;
  }

  .logout-btn {
    font-weight: 500;
  }

  .agrio-edition {
    position: absolute;
    bottom: 24px;
    left: 0;
    right: 0;
    text-align: center;
    letter-spacing: 3px;
    font-size: 12px;
    margin: 0;
    color: #005944;
  }
}

.header-md:after {
  content: "";
  position: absolute;
  left: 15px;
  right: 15px;
  bottom: -2px;
  height: 2px;
  border-radius: 5px;
  background-color: #004736;
  width: unset;
  background-image: unset;
  background-repeat: unset;
  background-position: unset;
}

.card {
  width: 100%;
  border-radius: 16px;
  background-color: white;
  box-shadow: 0px 4px 20px rgba(0, 62, 47, 0.25);
}

